--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
     "html-webpack-plugin": "^5.5.0",
     "jest": "^28.0.0",
     "jest-environment-jsdom": "^29.0.1",
+    "jest-fetch-mock": "^3.0.3",
     "lottie-web": "^5.9.4",
     "mini-css-extract-plugin": "^2.6.1",
     "postcss-loader": "^7.0.0",
